# NewHanafuda

./: .gitignore  BaseUI.cpp  BaseUI.h  CMakeLists.txt  Card.cpp  Card.h  ContentManager.cpp  ContentManager.h  Game.cpp  Game.h  Makefile  NewHanafuda.vcxproj  NewHanafuda.vcxproj.filters  Panel.cpp  Panel.h  PhaseState.cpp  PhaseState.h  Player.cpp  Player.h  README.md  Timer.cpp  Timer.h  ai.cpp  ai.h  common_def.h  extern_declare.cpp  external_declare.cpp  external_declare.h  imgui.ini  main.cpp  utilities.cpp  utilities.h
Debug/: vc140.idb
Debug/NewHanafuda.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NewHanafuda.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/: cards.txt  win.txt
